5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1785_1596.log
== TEST (2019-05-30 10:02:28) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0

print(min(n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:03:26) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0

while(i!=min(n)):
	j=j+1
	i=i+1
print(j,i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:03:44) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0

while(i!=min(n)):
	j=j+1
	i=i+1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:03:54) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0

while(i!=min(n)):
	j=j+1
	i=i+1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:04:09) 
-- CODE:
from numpy import*
n= array(float(input("digite as notas do aluno: ")))
i=0
j=0

while(i!=min(n)):
	j=j+1
	i=i+1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:05:26) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0

while(i!=min(n)):
	j=j+1
	i=i+1
print(i)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:06:21) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0

while(i!=min(n)):
	j=j+1
	i=i+1
n1= zeros(n-j)
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:06:32) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0

while(i!=min(n)):
	j=j+1
	i=i+1
n1= zeros(n-j)
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:06:44) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0

while(i!=min(n)):
	j=j+1
	i=i+1
n1= ones(n-j)
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:08:25) 
-- CODE:
from numpy import*
n= float(input("digite as notas do aluno: "))
i=0
j=0

while(i!=min(n)):
	j=j+1
	i=i+1
n1= ones(n-j)
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:09:03) 
-- CODE:
from numpy import*
n= float(input("digite as notas do aluno: "))
n1=array(eval(n))
i=0
j=0
print(n1)
while(i!=min(n)):
	j=j+1
	i=i+1
n1= ones(n-j)
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:09:41) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: "))
i=0
j=0

while(i!=min(n)):
	j=j+1
	i=i+1
print(j)
-- ERROR:
File "XXXX", line 3
    i=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:09:54) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: "))
i=0
j=0

while(i!=min(n)):
	j=j+1
	i=i+1
print(j)
-- ERROR:
File "XXXX", line 3
    i=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:10:19) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0

print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:10:41) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0

while(i!=min(n)):
	j=j+1
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:11:20) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	j=j+1
	i=i+1
n1= (n-j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:11:28) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	j=j+1
	i=i+1
n1= (n-j)
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:11:58) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	j=j+1
	i=i+1
n1= (n-j)
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:12:19) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	j=j+1
	i=i+1
n1= ones(n-j)
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:13:32) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	j=j+1
	i=i+1
n1=(n-j[i])
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:13:51) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	j=j+1
	i=i+1
n1=(n[i]-j[i])
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:14:57) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	j=j+1
	i=i+1
n1=ones(n1-n[i])
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:15:09) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	j=j+1
	i=i+1
n1=ones(n1[i]-n[i])
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:16:02) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	j=j+1
	i=i+1
n1=ones(n-j)
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:16:08) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	j=j+1
	i=i+1
n1=ones(n[i]-j)
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:16:25) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	j=j+1
	i=i+1
n1=zeros(n[i]-j)
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:16:33) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	j=j+1
	i=i+1
n1=(n[i]-j)
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:16:50) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	j=j+1
	i=i+1
n1=(n[i]-i)
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:17:04) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	j=j+1
	i=i+1
n1=ones(n[i]-i)
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:17:22) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	j=j+1
	i=i+1
n1=(n[i]-min(n))
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:17:41) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	j=j+1
	i=i+1
print(i)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:27:18) 
-- CODE:
v= float(input("digite"))
print (v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v= float(input())
ValueError: could not convert string to float: '[1,0,3]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:30:44) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
x= sum(n)/size(n)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:31:27) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
x= sum(n)/size(n)-min(n)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:32:12) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	j=j+1
	i=i+1
print(i)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:33:25) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	i=i+1
n1= (n[i]-i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:33:32) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	i=i+1
n1= (n[i]-i)
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:33:51) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	i=i+1
n1= (n[i])
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:34:11) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	j=j+1
	i=i+1
n1=(n[i]-min(n))
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:34:27) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	j=j+1
	i=i+1
n1=zeros(n[i]-j)
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:34:39) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	j=j+1
	i=i+1
n1=(n-j[i])
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:35:42) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0
while(i!=min(n)):
	j=j+1
	i=i+1
n1=ones(n[i]-i)
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:36:04) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=1
while(i!=min(n)):
	j=j+1
	i=i+1
n1=ones(n[i]-i)
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:36:10) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0

while(i!=min(n)):
	j=j+1
	i=i+1
n1=ones(n[i]-i)
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:36:45) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0

while(i!=min(n)):
	i=i+1
n1=(n[i]-i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:39:04) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0

sum(n)-min(n)/size(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:39:15) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0

x=sum(n)-min(n)/size(n)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:39:28) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0

x=(sum(n)-min(n))/size(n)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:39:45) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0

x=(sum(n)-min(n))/size(n)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:39:59) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0

x=(sum(n)-min(n))/size(n)-min(n)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:40:12) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0

x=(sum(n))/size(n)-min(n)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:40:30) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0

x=(sum(n))/n-min(n)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:40:34) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0

x=(sum(n))/n-min(n)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:41:03) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0

x=(sum(n))/n[i]-min(n)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:41:21) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0

x=sum(n)/size(n)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:41:29) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0

x=sum(n)/size(n)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:41:42) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0

x=sum(n)/size(n)-min(n)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:42:34) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0

x=sum(n)-min(n)/size(n)-1
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:42:46) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0

x=sum(n)-min(n)/size(n)-1
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:43:26) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0

x=(sum(n)-min(n))/size(n)-1
print(x)

-- EXECUTION TIME:
0.425255
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
0.33333333333333326
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.6
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
0.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:43:28) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0

x=(sum(n)-min(n))/size(n)-1
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:43:41) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0

x=(sum(n)-min(n))/(size(n)-1)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:43:49) 
-- CODE:
from numpy import*
n= array(eval(input("digite as notas do aluno: ")))
i=0
j=0
n1=0

x=(sum(n)-min(n))/(size(n)-1)
print(x)

-- EXECUTION TIME:
0.599781
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
